--- a/2-css/BBC Page css.css
+++ b/2-css/BBC Page css.css
@@ -1,25 +1,224 @@
 body {
-     
+    margin: 0;
+    padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
+
 }
 
 #Top-Bar {
-    background-color: white;
-    height: 60px;
+    width: 1000px;
+    margin: 0 auto;
+    height: 40px;
+    
 }
 
 #bbclogo {
-    margin-left:200px;
-    margin-top: 10px;
-    width: 120px;
+    
+    margin-top: 9px;
+    width: 90px;
+    float: left;
+    margin-right: 8px;
 }
 
-#news-bar  {
-    background-color: #cc0000;
-    height: 50px;
-
+.topbar-selection {
+    float: left;
+    border-left: 1px #CCCCCC solid;
+    height: 100%;
 }
 
-#news-bar h1 {
+#signin-image {
+    width: 25px;
+    margin: 10px;
+    float: left;
+}
+
+#signin-text {
+    font-weight: bold;
+    font-size: 90%;
+    position:relative;
+    top: 14px;
+    padding-right: 40px;
+}
+
+.top-tabs {
+    float: left;
+    margin: 14px;
+    font-weight: bold;
+    font-size: 90%;
+}
+
+#menu-arrow {
+    margin-left: 15px;
+    margin-right: 14px;
+    position: relative;
+    top: 11px;
+}
+
+#search-bar {
+    float: left;
+    margin: 10px 0px 5px 5px;
+    font-weight: bold;
+    font-size: 14px;
+    background-color: #E4E4E4;
+    border: none;
+    padding: 5px;
+}
+
+#search-image{
+    float: left;
+    width: 31px;
+    margin-top:10px;
+}
+
+#clear {
+    clear:both;
+}
+
+
+#menu-bar-container {
+    width: 100%;
+    height: 70px;
+    border-top: 1px #CCCCCC solid;
+    background-color: #bb1919;
+}
+
+#News {
+    width: 1000px;
+    margin: 0 auto;    
+}
+
+#news-header {
+    float: left;
     color: white;
-    margin-left: 200px;
+    padding: 0px;
+    margin: 0px;
+    font-size: 40px;
+    padding-top: 10px;
+    font-weight: normal;
 }
+
+
+#menu-bar-container-2 {
+    width: 100%;
+    background-color: #A91717;
+}
+
+#menu-bar {
+    height: 40px;
+    width: 1000px;
+    margin: 0 auto;
+}
+
+#menu-bar a {
+    font-size: 14px;
+    text-decoration: none;
+    color: white;
+    padding: 0 10px;
+    border-right: 1px solid #BB4545;
+    position: relative;
+    top: 10px;
+}
+
+#menu-bar a:first-of-type {
+    padding: 0 10px 0 0px;
+}
+
+#menu-bar a:last-of-type {
+    border: none;
+}
+
+#white-arrow {
+    position:relative;
+    top: 8px;
+    right: 8px;
+ }
+
+#menu-bar a:hover {
+    text-decoration-line:underline;
+}
+
+#page-container {
+    margin: 0 auto;
+    width: 1000px;
+}
+
+h2 a {
+    color: black;
+    border-bottom: 3px solid #a91717;
+    text-decoration: none;
+}
+
+h2 {
+    font-weight: normal; 
+    font-size: 20px;
+}
+h2 a:hover {
+    color: blue;
+}
+
+h3 {
+    font-size: 30px;
+}
+
+.clock {
+    float: left;
+    margin-right: 3px;
+   
+}
+
+.date {
+    float: left;
+    color: grey;
+    font-size: 15px;
+    margin-right: 3px;
+}
+
+.topic-link {
+    float: left;
+    border-left: 1px #CCCCCC solid;
+    padding-left: 3px;
+    color: brown;
+    text-decoration: none;
+    font-size: 13px;
+}
+
+.topic-link:hover {
+    color: blue;
+    
+}
+
+#main-article {
+    float:left;
+    height: auto;
+    width: 600px;
+}
+#title-stuff {
+    height: 150px;
+    border-bottom: 2px #CCCCCC solid;
+}
+
+#main-article-image {
+    padding: 20px 0 20px 0;
+    width: 100%;
+
+}
+
+.side-bar {
+    background-color: #CCCCCC;
+    position: relative;
+    top: 16px;
+    width: 300px;
+    height: auto;
+    float:right;
+
+}
+
+#top-stories {
+
+    margin: 10px 40px 10px 10px;
+}
+.header4 {
+    font-weight: normal;
+    font-size: 30px;
+}
+
