--- a/4-JQuery/MyAttempt/projectCSS.css
+++ b/4-JQuery/MyAttempt/projectCSS.css
@@ -36,19 +36,19 @@ html, body {
     font-size: 90%;
 }
 
-#htmlButton {
+#html {
     border-radius: 4px 0 0 4px;
 }
 
-#cssButton {
+#css {
 
 }
 
-#javascriptButton {
+#javascript {
 
 }
 
-#outputButton {
+#output {
     border-right: solid 1px black;
     border-radius: 0 4px 4px 0px;
 }
