--- a/0-Practice/Thomas/css.css
+++ b/0-Practice/Thomas/css.css
@@ -6,36 +6,45 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Raleway, sans-serif;
+
 }
 
-#nav-container {
-
-  width: 100%;
-}
 
 #nav-greyBar {
 
   height: 167px;
   background-color: #999999;
+    width: 100%;
 }
 
 #thomas-text {
   margin: 0 auto;
-  width: 806px;
+  width: 785px;
   word-spacing: 65px;
   font-size: 370%;
   color: white;
-  padding-top: 12px;
+  padding-top: 60px;
+  font-weight:900;
 }
 
 #logo {
   width: 12%;
   position: relative;
-  top: 25px;
+  top: 0px;
 }
 
-#me {
-  float: left;
+#logoMain {
+  width: 20%;
+}
+
+nav {
+  margin: 0 auto;
+  opacity: 0.8;
+  width: 970px;
+  height: 30px;
+  font-size: 22px;
+  font-weight: bolder;
+  box-shadow: 0px 1px 4px 1px black;
 }
 
 #me > h1, #me > p {
@@ -46,8 +55,8 @@ width: 1100px;
 }
 
 #thomas-photo {
-  width: 40%;
-  float: left;
+width: 100%;
+
 }
 
 
@@ -73,6 +82,6 @@ width: 1100px;
 
 .tribe-photo {
   float: right;
-  width: 40%;
+  width: 100%;
   margin: 20px 0px 20px 0px;
 }
