--- a/0-Practice/Thomas/css.css
+++ b/0-Practice/Thomas/css.css
@@ -60,8 +60,8 @@ width: 100%;
 }
 
 
-.h1-props {
-  font-weight: bold;
+h1 {
+  font-weight: bolder;
 }
 
 .text-props {
@@ -84,4 +84,8 @@ width: 100%;
   float: right;
   width: 100%;
   margin: 20px 0px 20px 0px;
+}
+
+#me-text {
+  margin: 50px 0px 0px 50px;
 }
