--- a/FreeCodeCamp/Dylano/mainCSS.css
+++ b/FreeCodeCamp/Dylano/mainCSS.css
@@ -9,11 +9,10 @@ html, body {
   padding: 0;
   font-family: Raleway, sans-serif;
   background-color: #FFFFFF;
-
 }
 
 #nav-container {
-  opacity: 0.7;
+
   font-size: 20px;
 }
 
@@ -47,8 +46,23 @@ h3 {
  display: none;
 }
 
+@media screen and (max-width: 375px) {
+  .header-text {
+    top: 150px;
+  }
+}
 .project-image {
   box-shadow: 0px 0px 5px 1px black;
-  margin: 10px 5px 10px 5px;
+  margin: 10px 0px 10px 0px;
+}
+.bg-inverse {
+  background-color: #c6c6c6 !important;
+}
 
+.navbar-toggler {
+    background-color: #c6c6c6 !important;
+}
+
+.center {
+  text-align: center;
 }
