--- a/FreeCodeCamp/Weather App/mainCSS.css
+++ b/FreeCodeCamp/Weather App/mainCSS.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -13,7 +15,6 @@ html, body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-
 }
 
 
@@ -23,10 +24,12 @@ html, body {
   position: relative;
   top: 100px;
   margin: auto;
+
   background-color: rgba(89, 89, 89, 0.81);
   box-shadow: 0px 2px 3px 3px #303030;
   border-radius: 10px;
   padding: 10px 5px 10px 5px;
+
 }
 
 .titleText {
@@ -34,4 +37,10 @@ html, body {
   font-weight: 800;
   font-size: 30px;
   letter-spacing: 3px;
+}
+
+.blur {
+  width: 100%;
+  height: 100%;
+  filter: blur(5px);
 }
