--- a/FreeCodeCamp/Weather App/mainCSS.css
+++ b/FreeCodeCamp/Weather App/mainCSS.css
@@ -10,26 +10,33 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Raleway, sans-serif;
-  /*background-color: #ffffff;*/
-  background-image: url("Resources/test.gif");
-  background-position: center;
-  background-size: cover;
+  background: linear-gradient(rgb(137, 167, 203), rgb(153, 192, 204));
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  /*background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;*/
 }
 
 
 .greyTest {
   width: 50%;
-  height: 100px;
+  height: auto;
   position: relative;
-  top: 100px;
+  top: 60px;
   margin: auto;
 
-  background-color: rgba(89, 89, 89, 0.81);
-  box-shadow: 0px 2px 3px 3px #303030;
+  background-color: rgba(117, 117, 117, 0.81);
+  box-shadow: 0px 1px 3px 3px #606060;
   border-radius: 10px;
   padding: 10px 5px 10px 5px;
+}
 
+@media screen and (max-width: 650px) {
+  .greyTest {
+    width: 90%;
+    top: 50px;
+  }
 }
 
 .titleText {
@@ -39,8 +46,18 @@ html, body {
   letter-spacing: 3px;
 }
 
-.blur {
+#showDegrees {
+  font-size: 50px;
+  text-shadow: 0px 2px 10px rgb(29, 29, 29);
+}
+
+#showLocation {
+  position: relative;
+  top: -20px;
+}
+
+/*.blur {
   width: 100%;
   height: 100%;
   filter: blur(5px);
-}
+}*/
