--- a/FreeCodeCamp/Weather App/mainCSS.css
+++ b/FreeCodeCamp/Weather App/mainCSS.css
@@ -53,6 +53,11 @@ html, body {
   top: -20px;
 }
 
+.degreeButton {
+  border-radius: 5px;
+  box-shadow: 0px 1px 3px 2px #606060;
+}
+
 /*.blur {
   width: 100%;
   height: 100%;
